--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Backend API Configuration
 # The URL of your FastAPI backend for file conversion
-VITE_BACKEND_URL=https://full-shrimp-deeply.ngrok-free.app/convert
+VITE_BACKEND_URL=https://full-shrimp-deeply.ngrok-free.app
 
 # Example for production:
 # VITE_BACKEND_URL=https://your-api-domain.com/convert
